add destroy to client
